--- a/week2/style (1).css
+++ b/week2/style (1).css
@@ -3,12 +3,12 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    color: #505050;
+    color: #25512780
 }
 
 /* Header Styles */
 header {
-    background-color: #282689;
+    background-color: #255105180;
     color: #fff;
     text-align: center;
     padding: 20px;
@@ -32,7 +32,7 @@ header {
 
 /* Navigation Styles */
 nav ul {
-    background-color: #333;
+    background-color: #000000;
     color: #fff;
     text-align: center;
     list-style-type: none;
@@ -54,7 +54,7 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #505050;  /* Darker shade for hover */
+    background-color: #746AB0;  /* Darker shade for hover */
 }
 
 /* Banner Styles */
@@ -137,7 +137,7 @@ main h3 {
 .cta-container {
     text-align: center;
     padding: 20px;
-    background-color: #f5f5f5;
+    background-color: #;
     margin-top: 30px;
 }
 
@@ -154,12 +154,12 @@ main h3 {
 }
 
 .cta-button:hover {
-    background-color: #0056b3;
+    background-color: #0000FF;
 }
 
 /* Footer Styles */
 footer {
-    background-color: #333;
+    background-color: #128128128;
     color: #fff;
     text-align: center;
     padding: 20px;
@@ -175,13 +175,13 @@ footer li {
 }
 
 footer a {
-    color: #fff;
+    color: #255255255;
     text-decoration: none;
     transition: color 0.3s;  /* Smooth transition for hover effect */
 }
 
 footer a:hover {
-    color: #b3b3b3;  /* Lighter color on hover */
+    color: #1783434;  /* Lighter color on hover */
 }
 
 footer p {
