--- a/week2/style (1).css
+++ b/week2/style (1).css
@@ -1,17 +1,20 @@
 /* Reset Styles */
 body {
+    background: scroll;
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    color: #25512780
-}
+    color: #710745;
+  }
 
 /* Header Styles */
 header {
-    background-color: #255105180;
-    color: #fff;
+    background: linear-gradient(301deg, #0505e3, #0cee36);
+    color: #d0f149;
     text-align: center;
-    padding: 30px;
+    padding: 20px;
+    position: sticky;
+    top: 0%;
 }
 
 .headeraH1 {
@@ -32,12 +35,12 @@ header {
 
 /* Navigation Styles */
 nav ul {
-    background-color: #000000;
-    color: #fff;
+    background-color: #333;
+    color: #d31ac1;
     text-align: center;
     list-style-type: none;
     margin: 0;
-    padding: 30px;
+    padding: 20px;
 }
 
 nav li {
@@ -46,7 +49,7 @@ nav li {
 
 nav a {
     display: block;
-    color: #fff;
+    color: #5bee0c;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -54,7 +57,7 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #746AB0;  /* Darker shade for hover */
+    background-color: #505050;  /* Darker shade for hover */
 }
 
 /* Banner Styles */
@@ -83,7 +86,7 @@ main {
 .services {
     margin: 2rem auto;
     padding: 2rem;
-    background-color: #fff;
+    background-color: #13dfe2;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
@@ -94,14 +97,14 @@ main h3 {
 /* Service Columns */
 .services-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
     gap: 20px;
 }
 
 .service-column {
-    flex-basis: calc(25% - 20px);
-    max-width: calc(25% - 20px);
+    flex-basis: calc(50% - 50px);
+    max-width: calc(50% - 50px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -137,30 +140,31 @@ main h3 {
 .cta-container {
     text-align: center;
     padding: 20px;
-    background-color: #;
+    background-color: #d7e41d;
     margin-top: 30px;
+
 }
 
 .cta-button {
-    display: inline-block;
+   display: grid;
     padding: 10px 20px;
-    background-color: #007BFF;
-    color: #ffffff;
+    background-color: #d54b0f;
+    color: #4a30da;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 10px;
     font-weight: bold;
-    margin-top: 15px;
+    margin-top: 30px;
     transition: background-color 0.3s;
 }
 
 .cta-button:hover {
-    background-color: #0000FF;
+    background-color: #1edc34;
 }
 
 /* Footer Styles */
 footer {
-    background-color: #128128128;
-    color: #fff;
+    background-color: #333;
+    color: #23e20e;
     text-align: center;
     padding: 20px;
 }
@@ -175,13 +179,13 @@ footer li {
 }
 
 footer a {
-    color: #255255255;
+    color: #fff;
     text-decoration: none;
     transition: color 0.3s;  /* Smooth transition for hover effect */
 }
 
 footer a:hover {
-    color: #1783434;  /* Lighter color on hover */
+    color: #b3b3b3;  /* Lighter color on hover */
 }
 
 footer p {
